(Format: Year/Month/Day)
Changes for 0.9.6:
*03/09/10:
   * Fixed buffer for TextButton (Henrik)
     Reduces flicker
     TextButton.hh/cc, Button.cc/hh
   * Added Move action (Thanks Mathias Gumz)
     Usage: Move x y
     FbCommandFactory.cc, FbCommandFactory.hh
   * Fixed minor bug in IconbarTool (Henrik)
     IconbarTool.hh/cc
   * Added update timer for transparency in FbWinFrame (Henrik)
     Updates the transparency 1 usec after each move,
     this speeds up moving in opaque mode
     * new resource item
        session.updateDelayTime: <micro sec>
     This delay decides when the transparency should update when you're moving
     FbWinFrame.hh/cc
*03/09/08:
   * Fixed numlock and scrlock bug in FbTk TextBox (Henrik)
     This will fix workspace edit window input when having
     num- or scrolllock on.
     TextBox.cc
   * Added iconbar mode menu (Henrik)
     * new resource item:
       session.screen<num>.iconbar.mode: <mode>
     Toolbar.cc, IconbarTool.cc/hh
   * Added icon list sig to Screen (Henrik)
     This will notify when the icon list changed.
     Useful for IconbarTool
     Screen.hh/cc
   * Fixed minor bug in FbTk::Subject (Henrik)
     If one removes an observer while notify() it'll put that observer
     in a dead_observer list which will be cleand after notify()
     Subject.cc
   * Fixed minor bug in FbTk::Button (Henrik)
     It did a execute() and then a updateTransparent (in buttonRelease), 
     which could 
     be dangerous if the execute() killed the object
     Button.cc
   * Fix when selecting + unneeded submenu redraw on enter+motion (Simon)
     Menu.cc
*03/09/07:
   * Added startup script to be used with startfluxbox, to get a 
     consistent frontend for both *dm and startx and your fluxbox-session  (Thanks Han)
     startfluxbox.in, startup.in
   * Minor cleaning in some Makefile.am (Thanks Han)   
*03/09/06:
   * Added Resize x y as command (Thanks Mathias Gumz)
     FbCommands.cc/hh, FbCommandFactory.cc